--- a/plugins/uiDPSDemo/CMakeLists.txt
+++ b/plugins/uiDPSDemo/CMakeLists.txt
@@ -5,6 +5,8 @@
 #	RCS :		$Id$
 #_______________________________________________________________________________
 
+add_definitions( -DmNoAutoUiString )
+
 SET(OD_MODULE_DEPS uiODMain)
 SET(OD_IS_PLUGIN yes)
 SET(OD_MODULE_SOURCES
