Moved translation to dgb repositry
Summary:
* The translation of other languages than english was moved to dgb repository.
* The caching mechanism was updated to work better
* Bugs fixed

Made it work better, and added documentation.

Test Plan:
Test for the translation itself is added to ensure that complex strings
with translations are properly updated.

Reviewers: satyaki

Reviewed By: satyaki

Subscribers: helene

Differential Revision: https://phabricator.dgbes.com:8443/D8642

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -140,7 +140,7 @@ if ( UNIX )
     add_test( "PNGCompression" ${CMAKE_SOURCE_DIR}/dtect/FindCompactablePNGs.csh )
 endif()
 
-SETUP_QT_TRANSLATION()
+SETUP_QT_TRANSLATION( od )
 
 OD_SETUP_TEST_FILTER()
 
