Changed format of CMakeLists.txt

--- a/plugins/ExpAttribs/CMakeLists.txt
+++ b/plugins/ExpAttribs/CMakeLists.txt
@@ -5,13 +5,13 @@
 #	RCS :		$Id$
 #_______________________________________________________________________________
 
-SET(OD_MODULE_DEPS AttributeEngine)
-SET(OD_IS_PLUGIN yes)
-SET(OD_MODULE_SOURCES
+set(OD_MODULE_DEPS AttributeEngine)
+set(OD_IS_PLUGIN yes)
+set(OD_MODULE_SOURCES
 	expattribspi.cc
 	eventfreqattrib.cc
 	grubbsfilterattrib.cc
 	similaritybyaw.cc
 )
-SET( OD_PLUGIN_ALO_EXEC ${OD_ATTRIB_EXECS} )
+set( OD_PLUGIN_ALO_EXEC ${OD_ATTRIB_EXECS} )
 OD_INIT_MODULE()
