--- a/plugins/GMT/CMakeLists.txt
+++ b/plugins/GMT/CMakeLists.txt
@@ -5,9 +5,9 @@
 #	RCS :		$Id$
 #_______________________________________________________________________________
 
-SET(OD_MODULE_DEPS EarthModel Seis Well)
-SET(OD_IS_PLUGIN yes)
-SET(OD_MODULE_SOURCES
+set(OD_MODULE_DEPS EarthModel Seis Well)
+set(OD_IS_PLUGIN yes)
+set(OD_MODULE_SOURCES
 	gmtpar.cc
 	gmtarray2dinterpol.cc
 	gmtbasemap.cc
