--- a/plugins/Madagascar/CMakeLists.txt
+++ b/plugins/Madagascar/CMakeLists.txt
@@ -5,14 +5,14 @@
 #	RCS :		$Id$
 #_______________________________________________________________________________
 
-SET(OD_MODULE_DEPS AttributeEngine)
-SET(OD_IS_PLUGIN yes)
-SET(OD_MODULE_SOURCES
+set(OD_MODULE_DEPS AttributeEngine)
+set(OD_IS_PLUGIN yes)
+set(OD_MODULE_SOURCES
 	madio.cc
 	maddefs.cc
 	madproc.cc
 	madprocflow.cc
 	madprocexec.cc
 	madpi.cc madstream.cc)
-SET( OD_MODULE_BATCHPROGS od_madexec.cc )
+set( OD_MODULE_BATCHPROGS od_madexec.cc )
 OD_INIT_MODULE()
