--- a/plugins/Tut/CMakeLists.txt
+++ b/plugins/Tut/CMakeLists.txt
@@ -5,14 +5,14 @@
 #	RCS :		$Id$
 #_______________________________________________________________________________
 
-SET(OD_MODULE_DEPS AttributeEngine EarthModel Well)
-SET(OD_IS_PLUGIN yes)
-SET(OD_MODULE_SOURCES
+set(OD_MODULE_DEPS AttributeEngine EarthModel Well)
+set(OD_IS_PLUGIN yes)
+set(OD_MODULE_SOURCES
 	tutseistools.cc
 	tuthortools.cc
 	tutorialattrib.cc
 	tutlogtools.cc
 	tutpi.cc)
-SET( OD_PLUGIN_ALO_EXEC ${OD_ATTRIB_EXECS} )
-SET( OD_NO_ALO_ENTRY 1 )
+set( OD_PLUGIN_ALO_EXEC ${OD_ATTRIB_EXECS} )
+set( OD_NO_ALO_ENTRY 1 )
 OD_INIT_MODULE()
