--- a/plugins/uiGMT/CMakeLists.txt
+++ b/plugins/uiGMT/CMakeLists.txt
@@ -5,9 +5,9 @@
 #	RCS :		$Id$
 #_______________________________________________________________________________
 
-SET(OD_MODULE_DEPS uiODMain GMT )
-SET(OD_IS_PLUGIN yes)
-SET(OD_MODULE_SOURCES
+set(OD_MODULE_DEPS uiODMain GMT )
+set(OD_IS_PLUGIN yes)
+set(OD_MODULE_SOURCES
           uigmtadv.cc
 	  uigmtarray2dinterpol.cc
 	  uigmtbasemap.cc
@@ -25,7 +25,7 @@ SET(OD_MODULE_SOURCES
 	  uigmtsymbolpars.cc
 	  uigmtpi.cc
 	  uigmtinfodlg.cc)
-SET( OD_PLUGIN_ALO_EXEC ${OD_MAIN_EXEC} )
+set( OD_PLUGIN_ALO_EXEC ${OD_MAIN_EXEC} )
 OD_INIT_MODULE()
 
 #REFERS_QTLIBS := yes
