--- a/src/Batch/CMakeLists.txt
+++ b/src/Batch/CMakeLists.txt
@@ -11,7 +11,7 @@ add_definitions( -DmNoAutoUiString )
 ADD_DEFINITIONS( -D_CONSOLE )
 set(OD_MODULE_DEPS Network )
 set(OD_USEBATCH 1)
-#SET(OD_USEQT Core)
+#set(OD_USEQT Core)
 set(OD_MODULE_SOURCES
 	batchprog.cc  )
 set(OD_MODULE_LINK_OPTIONS ${OD_SUPPRESS_UNDEF_FLAGS} )
