--- a/src/Strat/CMakeLists.txt
+++ b/src/Strat/CMakeLists.txt
@@ -8,8 +8,8 @@
 
 add_definitions( -DmNoAutoUiString )
 
-SET(OD_MODULE_DEPS General )
-SET(OD_MODULE_SOURCES
+set(OD_MODULE_DEPS General )
+set(OD_MODULE_SOURCES
 	   stratlith.cc
 	   stratunit.cc stratunititer.cc stratreftree.cc stratunitrepos.cc
 	   stratlayer.cc stratseqgen.cc stratseqattrib.cc
