--- a/src/Velocity/CMakeLists.txt
+++ b/src/Velocity/CMakeLists.txt
@@ -8,8 +8,8 @@
 
 add_definitions( -DmNoAutoUiString )
 
-SET(OD_MODULE_DEPS AttributeEngine EarthModel )
-SET(OD_MODULE_SOURCES
+set(OD_MODULE_DEPS AttributeEngine EarthModel )
+set(OD_MODULE_SOURCES
 		initvelocity.cc
 		velocityfunction.cc
 		velocityfunctioninterval.cc
@@ -22,6 +22,6 @@ SET(OD_MODULE_SOURCES
 		velocityvolumeconversion.cc
      )
 
-SET(OD_MODULE_BATCHPROGS od_process_velocityconv.cc )
+set(OD_MODULE_BATCHPROGS od_process_velocityconv.cc )
 OD_INIT_MODULE()
 
