--- a/src/uiNLA/CMakeLists.txt
+++ b/src/uiNLA/CMakeLists.txt
@@ -5,6 +5,6 @@
 #	RCS :		$Id$
 #_______________________________________________________________________________
 
-SET(OD_MODULE_DEPS uiIo NLA Well Seis )
-SET(OD_MODULE_SOURCES uinlapartserv.cc )
+set(OD_MODULE_DEPS uiIo NLA Well Seis )
+set(OD_MODULE_SOURCES uinlapartserv.cc )
 OD_INIT_MODULE()
