--- a/src/uiTools/CMakeLists.txt
+++ b/src/uiTools/CMakeLists.txt
@@ -5,8 +5,8 @@
 #	RCS :		$Id$
 #_______________________________________________________________________________
 
-SET( OD_MODULE_DEPS uiBase Network )
-SET( OD_MODULE_SOURCES
+set( OD_MODULE_DEPS uiBase Network )
+set( OD_MODULE_SOURCES
 	inituitools.cc
 	annotbuffill.cc
 	uiamplspectrum.cc
@@ -98,7 +98,7 @@ SET( OD_MODULE_SOURCES
 	uipolardiagram.cc
 )
 
-SET( OD_MODULE_GUI_PROGS
+set( OD_MODULE_GUI_PROGS
 	od_FileBrowser.cc
 	od_ProgressViewer.cc
 	od_uiReportIssue.cc
