--- a/src/uiVis/CMakeLists.txt
+++ b/src/uiVis/CMakeLists.txt
@@ -5,8 +5,8 @@
 #	RCS :		$Id$
 #_______________________________________________________________________________
 
-SET(OD_MODULE_DEPS uiOSG uiMPE )
-SET(OD_MODULE_SOURCES
+set(OD_MODULE_DEPS uiOSG uiMPE )
+set(OD_MODULE_SOURCES
 	inituivis.cc
 	uiarrowdlg.cc
 	uiattribtransdlg.cc
