--- a/src/visSurvey/CMakeLists.txt
+++ b/src/visSurvey/CMakeLists.txt
@@ -5,8 +5,8 @@
 #	RCS :		$Id$
 #_______________________________________________________________________________
 
-SET(OD_MODULE_DEPS visBase EarthModel MPEEngine Well PreStackProcessing )
-SET(OD_MODULE_SOURCES
+set(OD_MODULE_DEPS visBase EarthModel MPEEngine Well PreStackProcessing )
+set(OD_MODULE_SOURCES
 		initvissurvey.cc
 		visarrowdisplay.cc
 		visemobjdisplay.cc
