--- a/plugins/Hello/CMakeLists.txt
+++ b/plugins/Hello/CMakeLists.txt
@@ -5,9 +5,9 @@
 #	RCS :		$Id$
 #_______________________________________________________________________________
 
-SET(OD_MODULE_DEPS Basic)
-SET(OD_IS_PLUGIN yes)
-SET(OD_MODULE_SOURCES
+set(OD_MODULE_DEPS Basic)
+set(OD_IS_PLUGIN yes)
+set(OD_MODULE_SOURCES
 	hellopi.cc)
-SET( OD_NO_ALO_ENTRY 1 )
+set( OD_NO_ALO_ENTRY 1 )
 OD_INIT_MODULE()
