--- a/plugins/HorizonAttrib/CMakeLists.txt
+++ b/plugins/HorizonAttrib/CMakeLists.txt
@@ -5,14 +5,14 @@
 #	RCS :		$Id$
 #_______________________________________________________________________________
 
-SET(OD_MODULE_DEPS  Basic Algo AttributeEngine PreStackProcessing
+set(OD_MODULE_DEPS  Basic Algo AttributeEngine PreStackProcessing
 		    Attributes EarthModel MPEEngine)
-SET(OD_IS_PLUGIN yes)
-SET(OD_MODULE_SOURCES
+set(OD_IS_PLUGIN yes)
+set(OD_MODULE_SOURCES
 	horizonattrib.cc
 	horattribpi.cc
 	stratamp.cc
 	isopachmaker.cc)
-SET( OD_MODULE_BATCHPROGS od_isopach.cc od_stratamp.cc )
-SET( OD_PLUGIN_ALO_EXEC ${OD_ATTRIB_EXECS} )
+set( OD_MODULE_BATCHPROGS od_isopach.cc od_stratamp.cc )
+set( OD_PLUGIN_ALO_EXEC ${OD_ATTRIB_EXECS} )
 OD_INIT_MODULE()
