--- a/plugins/uiDPSDemo/CMakeLists.txt
+++ b/plugins/uiDPSDemo/CMakeLists.txt
@@ -7,11 +7,11 @@
 
 add_definitions( -DmNoAutoUiString )
 
-SET(OD_MODULE_DEPS uiODMain)
-SET(OD_IS_PLUGIN yes)
-SET(OD_MODULE_SOURCES
+set(OD_MODULE_DEPS uiODMain)
+set(OD_IS_PLUGIN yes)
+set(OD_MODULE_SOURCES
 	uidpsdemopi.cc
 	uidpsdemo.cc)
-SET( OD_PLUGIN_ALO_EXEC ${OD_MAIN_EXEC} )
-SET( OD_NO_ALO_ENTRY 1 )
+set( OD_PLUGIN_ALO_EXEC ${OD_MAIN_EXEC} )
+set( OD_NO_ALO_ENTRY 1 )
 OD_INIT_MODULE()
