--- a/plugins/uiExpAttribs/CMakeLists.txt
+++ b/plugins/uiExpAttribs/CMakeLists.txt
@@ -5,13 +5,13 @@
 #	RCS :		$Id$
 #_______________________________________________________________________________
 
-SET(OD_MODULE_DEPS ExpAttribs uiODMain)
-SET(OD_IS_PLUGIN yes)
-SET(OD_MODULE_SOURCES
+set(OD_MODULE_DEPS ExpAttribs uiODMain)
+set(OD_IS_PLUGIN yes)
+set(OD_MODULE_SOURCES
 	uieventfreqattrib.cc
 	uiexpattribspi.cc
 	uigrubbsfilterattrib.cc
 	uisimilaritybyaw.cc
 )
-SET( OD_PLUGIN_ALO_EXEC ${OD_MAIN_EXEC} )
+set( OD_PLUGIN_ALO_EXEC ${OD_MAIN_EXEC} )
 OD_INIT_MODULE()
