--- a/plugins/uiGoogleIO/CMakeLists.txt
+++ b/plugins/uiGoogleIO/CMakeLists.txt
@@ -5,14 +5,14 @@
 #	RCS :		$Id$
 #_______________________________________________________________________________
 
-SET(OD_MODULE_DEPS uiODMain)
-SET(OD_IS_PLUGIN yes)
-SET(OD_MODULE_SOURCES
+set(OD_MODULE_DEPS uiODMain)
+set(OD_IS_PLUGIN yes)
+set(OD_MODULE_SOURCES
 	uigoogleexpsurv.cc
 	uigoogleexpwells.cc
 	uigoogleexp2dlines.cc
 	uigoogleexppolygon.cc
 	uigoogleexprandline.cc
 	uigoogleiopi.cc)
-SET( OD_PLUGIN_ALO_EXEC ${OD_MAIN_EXEC} )
+set( OD_PLUGIN_ALO_EXEC ${OD_MAIN_EXEC} )
 OD_INIT_MODULE()
