--- a/plugins/uiHorizonAttrib/CMakeLists.txt
+++ b/plugins/uiHorizonAttrib/CMakeLists.txt
@@ -5,9 +5,9 @@
 #	RCS :		$Id$
 #_______________________________________________________________________________
 
-SET(OD_MODULE_DEPS uiODMain HorizonAttrib)
-SET(OD_IS_PLUGIN yes)
-SET(OD_MODULE_SOURCES
+set(OD_MODULE_DEPS uiODMain HorizonAttrib)
+set(OD_IS_PLUGIN yes)
+set(OD_MODULE_SOURCES
 	uicontourtreeitem.cc
 	uidatapointsetpickdlg.cc
 	uihorizonattrib.cc
@@ -15,5 +15,5 @@ SET(OD_MODULE_SOURCES
 	uiisopachmaker.cc
 	uistratamp.cc
 )
-SET( OD_PLUGIN_ALO_EXEC ${OD_MAIN_EXEC} )
+set( OD_PLUGIN_ALO_EXEC ${OD_MAIN_EXEC} )
 OD_INIT_MODULE()
