--- a/plugins/uiMadagascarAttribs/CMakeLists.txt
+++ b/plugins/uiMadagascarAttribs/CMakeLists.txt
@@ -5,11 +5,11 @@
 #	RCS :		$Id$
 #_______________________________________________________________________________
 
-SET(OD_MODULE_DEPS uiAttributes MadagascarAttribs)
-SET(OD_IS_PLUGIN yes)
-SET(OD_MODULE_SOURCES
+set(OD_MODULE_DEPS uiAttributes MadagascarAttribs)
+set(OD_IS_PLUGIN yes)
+set(OD_MODULE_SOURCES
 	uimadagcattrib.cc
 	uimadattribspi.cc)
-SET( OD_PLUGIN_ALO_EXEC ${OD_MAIN_EXEC} )
-SET( OD_NO_ALO_ENTRY 1 )
+set( OD_PLUGIN_ALO_EXEC ${OD_MAIN_EXEC} )
+set( OD_NO_ALO_ENTRY 1 )
 OD_INIT_MODULE()
