--- a/plugins/uiPreStackViewer/CMakeLists.txt
+++ b/plugins/uiPreStackViewer/CMakeLists.txt
@@ -5,9 +5,9 @@
 #	RCS :		$Id$
 #_______________________________________________________________________________
 
-SET( OD_MODULE_DEPS uiODMain )
-SET( OD_IS_PLUGIN yes)
-SET( OD_MODULE_SOURCES
+set( OD_MODULE_DEPS uiODMain )
+set( OD_IS_PLUGIN yes)
+set( OD_MODULE_SOURCES
 		uipsviewerpi.cc
 		uipsviewerappearancetab.cc
 		uipsviewermanager.cc
@@ -17,5 +17,5 @@ SET( OD_MODULE_SOURCES
 		uipsviewersettingdlg.cc
 		uipsviewershapetab.cc
 )
-SET( OD_PLUGIN_ALO_EXEC ${OD_MAIN_EXEC} )
+set( OD_PLUGIN_ALO_EXEC ${OD_MAIN_EXEC} )
 OD_INIT_MODULE()
