--- a/plugins/uiTut/CMakeLists.txt
+++ b/plugins/uiTut/CMakeLists.txt
@@ -5,15 +5,15 @@
 #	RCS :		$Id$
 #_______________________________________________________________________________
 
-SET(OD_MODULE_NAME uiTut)
-SET(OD_IS_PLUGIN 1 )
-SET(OD_MODULE_DEPS uiODMain Tut)
-SET(OD_MODULE_SOURCES 
+set(OD_MODULE_NAME uiTut)
+set(OD_IS_PLUGIN 1 )
+set(OD_MODULE_DEPS uiODMain Tut)
+set(OD_MODULE_SOURCES 
 	uitutseistools.cc
 	uituthortools.cc
 	uitutorialattrib.cc
 	uitutwelltools.cc
 	uitutpi.cc)
-SET( OD_PLUGIN_ALO_EXEC ${OD_MAIN_EXEC} )
-SET( OD_NO_ALO_ENTRY 1 )
+set( OD_PLUGIN_ALO_EXEC ${OD_MAIN_EXEC} )
+set( OD_NO_ALO_ENTRY 1 )
 OD_INIT_MODULE()
