--- a/plugins/uiVoxelConnectivityFilter/CMakeLists.txt
+++ b/plugins/uiVoxelConnectivityFilter/CMakeLists.txt
@@ -5,10 +5,10 @@
 #	RCS :		$Id$
 #_______________________________________________________________________________
 
-SET(OD_MODULE_DEPS uiODMain VoxelConnectivityFilter)
-SET(OD_IS_PLUGIN yes)
-SET(OD_MODULE_SOURCES
+set(OD_MODULE_DEPS uiODMain VoxelConnectivityFilter)
+set(OD_IS_PLUGIN yes)
+set(OD_MODULE_SOURCES
 	uivoxelconnectivityfilterpi.cc
 	uivoxelconnectivityfilter.cc )
-SET( OD_PLUGIN_ALO_EXEC ${OD_MAIN_EXEC} )
+set( OD_PLUGIN_ALO_EXEC ${OD_MAIN_EXEC} )
 OD_INIT_MODULE()
