--- a/src/uiCmdDriver/CMakeLists.txt
+++ b/src/uiCmdDriver/CMakeLists.txt
@@ -5,8 +5,8 @@
 #	RCS :		$Id$
 #_______________________________________________________________________________
 
-SET(OD_MODULE_DEPS uiTools )
-SET(OD_MODULE_SOURCES
+set(OD_MODULE_DEPS uiTools )
+set(OD_MODULE_SOURCES
 	canvascommands.cc
 	cmdcomposer.cc
 	cmddriverbasics.cc
