--- a/src/uiSysAdm/CMakeLists.txt
+++ b/src/uiSysAdm/CMakeLists.txt
@@ -5,9 +5,9 @@
 #	RCS :		$Id$
 #_______________________________________________________________________________
 
-SET(OD_MODULE_DEPS uiIo )
-SET(OD_MODULE_SOURCES uiodsysadm.cc uiodsysadmcoltabs.cc )
+set(OD_MODULE_DEPS uiIo )
+set(OD_MODULE_SOURCES uiodsysadm.cc uiodsysadmcoltabs.cc )
 
-SET( OD_MODULE_PROGS od_sysadmmain.cc  )
+set( OD_MODULE_PROGS od_sysadmmain.cc  )
 
 OD_INIT_MODULE()
