--- a/src/uiWell/CMakeLists.txt
+++ b/src/uiWell/CMakeLists.txt
@@ -5,8 +5,8 @@
 #	RCS :		$Id$
 #_______________________________________________________________________________
 
-SET(OD_MODULE_DEPS uiStrat Well)
-SET(OD_MODULE_SOURCES
+set(OD_MODULE_DEPS uiStrat Well)
+set(OD_MODULE_SOURCES
 		inituiwell.cc
 		uibulkwellimp.cc
 		uid2tmodelgrp.cc
