[od] Numerous small changes.
Summary: Made visBase, visSurvey, uiOSG and uiVis handle uiStrings correctly.

Test Plan: OpendTecgt compiles and starts correctly.

Reviewers: prajjaval

Reviewed By: prajjaval

Subscribers: helene

Differential Revision: https://phabricator.dgbes.com:8443/D8710

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ data/ModDeps.dgb
 data/SequenceModels
 data/dgbAttribs/
 data/localizations/*.qm
+data/localizations/generated
 test/
 Contents/
 plugins/lux64
