--- a/src/Seis/CMakeLists.txt
+++ b/src/Seis/CMakeLists.txt
@@ -10,8 +10,8 @@ add_definitions( -DmNoAutoUiString )
 
 set(OD_MODULE_DEPS Geometry MMProc )
 
-SET ( OD_TEST_PROGS seisbuf.cc )
-SET ( OD_BATCH_TEST_PROGS synthseis.cc )
+set ( OD_TEST_PROGS seisbuf.cc )
+set ( OD_BATCH_TEST_PROGS synthseis.cc )
 
 set(OD_MODULE_SOURCES
 	initseis.cc
