--- a/src/visSurvey/CMakeLists.txt
+++ b/src/visSurvey/CMakeLists.txt
@@ -5,6 +5,8 @@
 #	RCS :		$Id$
 #_______________________________________________________________________________
 
+add_definitions( -DmNoAutoUiString )
+
 set(OD_MODULE_DEPS visBase EarthModel MPEEngine Well PreStackProcessing )
 set(OD_MODULE_SOURCES
 		initvissurvey.cc
