od: Const char* to uiString in uiBase
Summary: Converted the strings from const char* to uiString

Test Plan: compile and running

Reviewers: raman

Reviewed By: raman

Differential Revision: https://phabricator.dgbes.com:8443/D8636

--- a/src/uiBase/CMakeLists.txt
+++ b/src/uiBase/CMakeLists.txt
@@ -5,6 +5,8 @@
 #	RCS :		$Id$
 #_______________________________________________________________________________
 
+add_definitions( -DmNoAutoUiString )
+
 set(OD_MODULE_DEPS Network )
 set(OD_USEQT Widgets PrintSupport)
 set(OD_TEST_PROGS )
