--- a/src/uiFlatView/CMakeLists.txt
+++ b/src/uiFlatView/CMakeLists.txt
@@ -5,6 +5,8 @@
 #	RCS :		$Id$
 #_______________________________________________________________________________
 
+add_definitions( -DmNoAutoUiString )
+
 SET(OD_MODULE_DEPS uiTools )
 SET(OD_MODULE_SOURCES
 	flatviewzoommgr.cc
