Various new uiString changes.
Test Plan: OpendTect starts nicely

Reviewers: prajjaval

Reviewed By: prajjaval

Subscribers: helene

Differential Revision: https://phabricator.dgbes.com:8443/D8736

--- a/src/uiVolumeProcessing/CMakeLists.txt
+++ b/src/uiVolumeProcessing/CMakeLists.txt
@@ -5,6 +5,7 @@
 #	RCS :		$Id$
 #_______________________________________________________________________________
 
+add_definitions( -DmNoAutoUiString )
 set(OD_MODULE_DEPS uiVelocity uiWell uiAttributes uiEarthModel VolumeProcessing )
 set(OD_MODULE_SOURCES
 	inituivolumeprocessing.cc
