od6.0: Processing windows opened from Porcessing->Create Seismic Oputpt->Attributes->Along Horizon 2D/3D and Between Horizons 2D/3D are changed to non-modal. Ported from od.
Summary: See D8384

Test Plan: See D8384

Reviewers: raman

Reviewed By: raman

Differential Revision: https://phabricator.dgbes.com:8443/D8778

--- a/src/uiTools/CMakeLists.txt
+++ b/src/uiTools/CMakeLists.txt
@@ -18,6 +18,7 @@ SET( OD_MODULE_SOURCES
 	uiaxishandler.cc
 	uibasemap.cc
 	uibatchjobdispatcher.cc
+	uibatchprocdlg.cc
 	uibinidtable.cc
 	uibuildlistfromlist.cc
 	uibuttonstateedit.cc
