[od6] Rework of TranslatorGroups
Summary:
The od6 version of D8736
[od6.0] Various new uiString changes.

Test Plan: OpendTect compiles, links and seems to behave as it should.

Reviewers: prajjaval

Reviewed By: prajjaval

Subscribers: helene

Differential Revision: https://phabricator.dgbes.com:8443/D8781

--- a/src/uiVolumeProcessing/CMakeLists.txt
+++ b/src/uiVolumeProcessing/CMakeLists.txt
@@ -5,8 +5,9 @@
 #	RCS :		$Id$
 #_______________________________________________________________________________
 
-SET(OD_MODULE_DEPS uiVelocity uiWell uiAttributes uiEarthModel VolumeProcessing )
-SET(OD_MODULE_SOURCES
+add_definitions( -DmNoAutoUiString )
+set(OD_MODULE_DEPS uiVelocity uiWell uiAttributes uiEarthModel VolumeProcessing )
+set(OD_MODULE_SOURCES
 	inituivolumeprocessing.cc
 	uivelocitygridder.cc
 	uivolprocattrib.cc
