[od] added volprocstatscomputer files to compute median filter on 3D DipSteering
Summary: added volprocstatscomputer files to compute median filter on 3D DipSteering

Test Plan:
tested BG steering stepout 1 median identical to result in 5.0;
no MT testing profiling yet

Maniphest Tasks: T224

Differential Revision: https://phabricator.dgbes.com:8443/D8820

--- a/src/VolumeProcessing/CMakeLists.txt
+++ b/src/VolumeProcessing/CMakeLists.txt
@@ -20,6 +20,7 @@ set( OD_MODULE_SOURCES
 	volproclateralsmoother.cc
 	volprocregionfiller.cc
 	volprocsmoother.cc
+	volprocstatscomputer.cc
 	volprocsurfacelimitedfiller.cc
 	volproctrans.cc
 	volprocvolreader.cc
