--- a/src/uiSysAdm/CMakeLists.txt
+++ b/src/uiSysAdm/CMakeLists.txt
@@ -5,6 +5,8 @@
 #	RCS :		$Id$
 #_______________________________________________________________________________
 
+add_definitions( -DmNoAutoUiString )
+
 set(OD_MODULE_DEPS uiIo )
 set(OD_MODULE_SOURCES uiodsysadm.cc uiodsysadmcoltabs.cc )
 
