od: const char to uiStrings in uiSeis
Summary: conversion from const char to uistrings

Test Plan: compiled and running

Reviewers: raman

Reviewed By: raman

Subscribers: helene

Differential Revision: https://phabricator.dgbes.com:8443/D8802

--- a/src/uiSeis/CMakeLists.txt
+++ b/src/uiSeis/CMakeLists.txt
@@ -5,8 +5,10 @@
 #	RCS :		$Id$
 #_______________________________________________________________________________
 
-SET(OD_MODULE_DEPS uiIo Seis Velocity)
-SET(OD_MODULE_SOURCES
+add_definitions( -DmNoAutoUiString )
+
+set(OD_MODULE_DEPS uiIo Seis Velocity)
+set(OD_MODULE_SOURCES
 	inituiseis.cc
 	uibatchtime2depthsetup.cc
 	uiclusterproc.cc
