--- a/src/uiSeis/CMakeLists.txt
+++ b/src/uiSeis/CMakeLists.txt
@@ -5,6 +5,8 @@
 #	RCS :		$Id$
 #_______________________________________________________________________________
 
+add_definitions( -DmNoAutoUiString )
+
 set(OD_MODULE_DEPS uiIo Seis Velocity)
 set(OD_MODULE_SOURCES
 	inituiseis.cc
