[od6.0] Added Volume statistics step to be used in volume processing
Summary:
[od6.0] Added Volume statistics step to be used in volume processing
for now does not contain all the options, only dedicated to steering computation
can be broadened later on

Test Plan:
tested results BG steering median filtered identical between od,
6.0 and 5.0 used as a reference; remeainig actions: should be profiled to gain
as much time as possible

Reviewers: nanne

Reviewed By: nanne

Maniphest Tasks: T224

Differential Revision: https://phabricator.dgbes.com:8443/D8897

--- a/src/VolumeProcessing/CMakeLists.txt
+++ b/src/VolumeProcessing/CMakeLists.txt
@@ -18,6 +18,7 @@ set( OD_MODULE_SOURCES
 	volprochorinterfiller.cc
 	volproclateralsmoother.cc
 	volprocsmoother.cc
+	volprocstatscomputer.cc
 	volproctrans.cc
 	volprocbodyfiller.cc
 	volprocsurfacelimitedfiller.cc
