od: const char to uiStrings in uiStrat
Summary: conversion from const char to uistrings

Test Plan: compiled and running

Reviewers: raman

Reviewed By: raman

Subscribers: helene, raman

Differential Revision: https://phabricator.dgbes.com:8443/D8849

--- a/src/uiStrat/CMakeLists.txt
+++ b/src/uiStrat/CMakeLists.txt
@@ -5,8 +5,10 @@
 #	RCS :		$Id$
 #_______________________________________________________________________________
 
-SET(OD_MODULE_DEPS uiIo Strat )
-SET(OD_MODULE_SOURCES
+add_definitions( -DmNoAutoUiString )
+
+set(OD_MODULE_DEPS uiIo Strat )
+set(OD_MODULE_SOURCES
 	uistratreftree.cc uistrattreewin.cc uistratutildlgs.cc
 	uistratdisplay.cc uistratdispdata.cc
 	uistratlvllist.cc uistratselunits.cc
