od: const char to uiString in uIWell
Summary: Converted const char to uiString

Test Plan: compiled and running

Reviewers: raman

Reviewed By: raman

Subscribers: raman

Differential Revision: https://phabricator.dgbes.com:8443/D8850

--- a/src/uiWell/CMakeLists.txt
+++ b/src/uiWell/CMakeLists.txt
@@ -5,8 +5,10 @@
 #	RCS :		$Id$
 #_______________________________________________________________________________
 
-SET(OD_MODULE_DEPS uiStrat Well)
-SET(OD_MODULE_SOURCES
+add_definitions( -DmNoAutoUiString )
+
+set(OD_MODULE_DEPS uiStrat Well)
+set(OD_MODULE_SOURCES
 		inituiwell.cc
 		uibulkwellimp.cc
 		uid2tmodelgrp.cc
