SEG-Y: prepared store/retrieve of parameters

--- a/plugins/uiSEGY/CMakeLists.txt
+++ b/plugins/uiSEGY/CMakeLists.txt
@@ -17,6 +17,7 @@ set(OD_MODULE_SOURCES
     uisegyexamine.cc
     uisegyexp.cc
     uisegyimpdlg.cc
+    uisegyimpparsdlg.cc
     uisegyimptype.cc
     uisegymanip.cc
     uisegypi.cc
