od: const char to uiString in uiPreStackProcessing
Summary: converted all const char to uistring

Test Plan: compiled and running

Reviewers: raman

Reviewed By: raman

Subscribers: raman

Differential Revision: https://phabricator.dgbes.com:8443/D8851

--- a/src/uiPreStackProcessing/CMakeLists.txt
+++ b/src/uiPreStackProcessing/CMakeLists.txt
@@ -5,8 +5,10 @@
 #	RCS :		$Id$
 #_______________________________________________________________________________
 
-SET(OD_MODULE_DEPS uiSeis PreStackProcessing )
-SET(OD_MODULE_SOURCES
+add_definitions( -DmNoAutoUiString )
+
+set(OD_MODULE_DEPS uiSeis PreStackProcessing )
+set(OD_MODULE_SOURCES
 	inituiprestackprocessing.cc
 	psviewer2dgatherpainter.cc
 	uibatchprestackproc.cc 
