--- a/src/uiAttributes/CMakeLists.txt
+++ b/src/uiAttributes/CMakeLists.txt
@@ -5,6 +5,8 @@
 #	RCS :		$Id$
 #_______________________________________________________________________________
 
+add_definitions( -DmNoAutoUiString )
+
 set(OD_MODULE_DEPS uiPreStackProcessing Attributes )
 set(OD_MODULE_SOURCES
 	attribsetcreator.cc
