od: const char to uiString converstion in uiEMAttrib
Summary: Converted all the const char to uiString. Revision also contains modified cmakelists.txt for uiVolumeProcessing

Test Plan: compiled and running

Reviewers: raman

Reviewed By: raman

Subscribers: raman

Differential Revision: https://phabricator.dgbes.com:8443/D8862

--- a/src/uiEMAttrib/CMakeLists.txt
+++ b/src/uiEMAttrib/CMakeLists.txt
@@ -5,17 +5,19 @@
 #	RCS :		$Id$
 #_______________________________________________________________________________
 
-SET(OD_MODULE_DEPS uiAttributes uiEarthModel EMAttrib )
-SET(OD_MODULE_SOURCES
-		uiattremout.cc
-		uiattrsurfout.cc
-		uiattrtrcselout.cc
-		uicreate2dgrid.cc
-		uiemattribpartserv.cc
-		uihor2dfrom3ddlg.cc
-		uihorizonshiftdlg.cc
-		horizon2dscanner.cc
-		uiimphorizon2d.cc
-		uiseiseventsnapper.cc
+add_definitions( -DmNoAutoUiString )
+
+set(OD_MODULE_DEPS uiAttributes uiEarthModel EMAttrib )
+set(OD_MODULE_SOURCES
+	uiattremout.cc
+	uiattrsurfout.cc
+	uiattrtrcselout.cc
+	uicreate2dgrid.cc
+	uiemattribpartserv.cc
+	uihor2dfrom3ddlg.cc
+	uihorizonshiftdlg.cc
+	horizon2dscanner.cc
+	uiimphorizon2d.cc
+	uiseiseventsnapper.cc
 )
 OD_INIT_MODULE()
