--- a/src/uiViewer2D/CMakeLists.txt
+++ b/src/uiViewer2D/CMakeLists.txt
@@ -5,6 +5,8 @@
 #	RCS :		$Id$
 #_______________________________________________________________________________
 
+add_definitions( -DmNoAutoUiString )
+
 set(OD_MODULE_DEPS uiMPE )
 set(OD_MODULE_SOURCES
 	inituiviewer2d.cc
