--- a/src/uiViewer2D/CMakeLists.txt
+++ b/src/uiViewer2D/CMakeLists.txt
@@ -5,8 +5,10 @@
 #	RCS :		$Id$
 #_______________________________________________________________________________
 
-SET(OD_MODULE_DEPS uiMPE )
-SET(OD_MODULE_SOURCES
+add_definitions( -DmNoAutoUiString )
+
+set(OD_MODULE_DEPS uiMPE )
+set(OD_MODULE_SOURCES
 	inituiviewer2d.cc
 	view2ddata.cc
 	view2ddataman.cc
