od: conversion of const char to uiString in uiMPE
Summary: converted all the const char to uiString

Test Plan: compiled and running

Reviewers: raman

Reviewed By: raman

Subscribers: raman

Differential Revision: https://phabricator.dgbes.com:8443/D8863

--- a/src/uiMPE/CMakeLists.txt
+++ b/src/uiMPE/CMakeLists.txt
@@ -5,8 +5,10 @@
 #	RCS :		$Id$
 #_______________________________________________________________________________
 
-SET(OD_MODULE_DEPS uiAttributes uiFlatView MPEEngine )
-SET(OD_MODULE_SOURCES
+add_definitions( -DmNoAutoUiString )
+
+set(OD_MODULE_DEPS uiAttributes uiFlatView MPEEngine )
+set(OD_MODULE_SOURCES
 	inituimpe.cc
 	mpef3dflatvieweditor.cc
 	mpefssflatvieweditor.cc
