od: updated cCmakeLists.txt for uiWellAttrib
Summary: File was missing from earlier revision

Test Plan: complied and running

Reviewers: ranojay

Reviewed By: ranojay

Subscribers: raman

Differential Revision: https://phabricator.dgbes.com:8443/D8964

--- a/src/uiWellAttrib/CMakeLists.txt
+++ b/src/uiWellAttrib/CMakeLists.txt
@@ -5,8 +5,10 @@
 #	RCS :		$Id$
 #_______________________________________________________________________________
 
-SET( OD_MODULE_DEPS uiWell uiAttributes WellAttrib )
-SET( OD_MODULE_SOURCES
+add_definitions( -DmNoAutoUiString )
+
+set( OD_MODULE_DEPS uiWell uiAttributes WellAttrib )
+set( OD_MODULE_SOURCES
 	uicreateattriblogdlg.cc
 	uicreatelogcubedlg.cc
 	uiwellattribpartserv.cc
