od: uiStrings changes in uiEarthModel
Summary: the argument add_definitions( -DmNoAutoUiString ) was commented in uiEarthModel. It has now made active.

Test Plan: compiled and running

Reviewers: raman

Reviewed By: raman

Differential Revision: https://phabricator.dgbes.com:8443/D8968

--- a/src/uiEarthModel/CMakeLists.txt
+++ b/src/uiEarthModel/CMakeLists.txt
@@ -5,7 +5,7 @@
 #	RCS :		$Id$
 #_______________________________________________________________________________
 
-#add_definitions( -DmNoAutoUiString )
+add_definitions( -DmNoAutoUiString )
 
 SET(OD_MODULE_DEPS uiStrat EarthModel )
 SET(OD_MODULE_SOURCES
