Fixed multi-machine processing regressions at multiple levels.

--- a/src/uiIo/CMakeLists.txt
+++ b/src/uiIo/CMakeLists.txt
@@ -76,9 +76,11 @@ set( OD_MODULE_SOURCES
 	inituiio.cc
 )
 
-set( OD_MODULE_GUI_PROGS od_BatchHosts.cc )
 if( WIN32 )
-    set(OD_od_BatchHosts_RESOURCE  resources/od_BatchHosts.rc )
+    set( OD_ELEVATED_PERMISSIONS_GUI_PROGS od_BatchHosts.cc )
+    set( OD_od_BatchHosts_RESOURCE  resources/od_BatchHosts.rc )
+else()
+    set( OD_MODULE_GUI_PROGS od_BatchHosts.cc )
 endif()
 
 OD_INIT_MODULE()
