Added first vision of uiGVFreehandAreaSelectionTool, a generic tool to handle freehand drawing/selection for Graphics views

--- a/src/uiTools/CMakeLists.txt
+++ b/src/uiTools/CMakeLists.txt
@@ -45,6 +45,7 @@ SET( OD_MODULE_SOURCES
 	uigraphicssceneaxismgr.cc
 	uigraphicsview.cc
 	uigridder2d.cc
+	uigvfreehandareaselectiontool.cc
 	uihandledlsitefail.cc
 	uihistogramdisplay.cc
 	uiinterpollayermodel.cc
