--- a/CMakeModules/templates/Doxyfile.in
+++ b/CMakeModules/templates/Doxyfile.in
@@ -355,7 +355,7 @@ EXAMPLE_PATTERNS       =
 # directories that contain image that are included in the documentation (see 
 # the \image command).
 
-IMAGE_PATH             = 
+IMAGE_PATH             = @CMAKE_SOURCE_DIR@/doc/Programmer/images
 
 # The INPUT_FILTER tag can be used to specify a program that doxygen should 
 # invoke to filter for each input file. Doxygen will invoke the filter program 
