--- a/plugins/uiPresentationMaker/CMakeLists.txt
+++ b/plugins/uiPresentationMaker/CMakeLists.txt
@@ -8,6 +8,8 @@
 set(OD_MODULE_DEPS uiODMain)
 set(OD_IS_PLUGIN yes)
 set(OD_MODULE_SOURCES
+	presentationspec.cc
+	uipresentationmaker.cc
 	uipresentationmakerpi.cc
 )
 
