[od6.0] Fixed memory issues raised by valgrind/parallel studio.
Summary:
Used valgrind to find potential memory leaks and memory errors. Nothing
major found, but a couple of leaks and a couple of other issues.

Test Plan:
od_process_volume comes out completely clean with regards to memory errors,
and a reduced numbers of memory leaks.

Reviewers: helene

Reviewed By: helene

Differential Revision: https://phabricator.dgbes.com:8443/D9262

--- a/src/Basic/CMakeLists.txt
+++ b/src/Basic/CMakeLists.txt
@@ -113,7 +113,7 @@ if ( UNIX )
 endif()
 
 if ( ITTNOTIFY_FOUND )
-    set ( OD_MODULE_STATIC_LIBS ${ITTNOTIFY_LIBRARY} )
+    set ( OD_MODULE_DEPS ${ITTNOTIFY_LIBRARY} )
     list ( APPEND OD_MODULE_INCLUDESYSPATH ${ITTNOTIFY_INCLUDE_DIR} )
 endif()
 
