[od6.0] Fixed memory issues raised by valgrind/parallel studio.
Summary:
Used valgrind to find potential memory leaks and memory errors. Nothing
major found, but a couple of leaks and a couple of other issues.

Test Plan:
od_process_volume comes out completely clean with regards to memory errors,
and a reduced numbers of memory leaks.

Reviewers: helene

Reviewed By: helene

Differential Revision: https://phabricator.dgbes.com:8443/D9262

--- a/src/Basic/CMakeLists.txt
+++ b/src/Basic/CMakeLists.txt
@@ -112,6 +112,11 @@ if ( UNIX )
     set ( OD_MODULE_PROGS ${OD_MODULE_PROGS} od_batch_launcher.cc )
 endif()
 
+if ( ITTNOTIFY_FOUND )
+    set ( OD_MODULE_DEPS ${ITTNOTIFY_LIBRARY} )
+    list ( APPEND OD_MODULE_INCLUDESYSPATH ${ITTNOTIFY_INCLUDE_DIR} )
+endif()
+
 if ( NOT (CMAKE_SOURCE_DIR STREQUAL CMAKE_BINARY_DIR) )
     execute_process(
                 COMMAND ${CMAKE_COMMAND} -E copy_if_different
@@ -127,13 +132,6 @@ if ( NOT (CMAKE_SOURCE_DIR STREQUAL CMAKE_BINARY_DIR) )
                     "${PROJECT_BINARY_DIR}/testscripts/count_to_1000.csh" )
 
 endif()
-
-
-if ( ITTNOTIFY_FOUND )
-    set ( OD_MODULE_STATIC_LIBS ${ITTNOTIFY_LIBRARY} )
-    list ( APPEND OD_MODULE_INCLUDESYSPATH ${ITTNOTIFY_INCLUDE_DIR} )
-endif()
-
 
 
 OD_INIT_MODULE()
