--- a/src/Basic/CMakeLists.txt
+++ b/src/Basic/CMakeLists.txt
@@ -9,7 +9,12 @@
 add_definitions( -DmNoAutoUiString )
 
 set( OD_USEQT Core )
-set( OD_USEBREAKPAD Yes )
+
+if ( OD_ENABLE_BREAKPAD )
+    list(APPEND OD_MODULE_INCLUDESYSPATH ${BREAKPAD_DIR}/include/breakpad )
+    list(APPEND OD_MODULE_EXTERNAL_LIBS ${OD_BREAKPADLIBS} )
+endif()
+
 set( QT_MOC_HEADERS
 	qtimercomm.h
 )
@@ -108,8 +113,9 @@ set( OD_MODULE_SOURCES
 )
 
 set ( OD_MODULE_PROGS test_exit_program.cc )
+
 if ( UNIX )
-    set ( OD_MODULE_PROGS ${OD_MODULE_PROGS} od_batch_launcher.cc )
+    list ( APPEND OD_MODULE_PROGS od_batch_launcher.cc )
 endif()
 
 if ( ITTNOTIFY_FOUND )
@@ -132,7 +138,6 @@ if ( NOT (CMAKE_SOURCE_DIR STREQUAL CMAKE_BINARY_DIR) )
                     "${PROJECT_BINARY_DIR}/testscripts/count_to_1000.csh" )
 
 endif()
-
 
 OD_INIT_MODULE()
 
