[od6] Added symbol generation to breakpad, and installed symbol files in release mode.
Summary:
This revision does a few things:

# All symbols are extracted into bin/lux64/<dbg|rls>/symbols/
# All symbols are installed in release mode
# The crash-handler launches a new script (process_dumpfile.sh/cmd)
  to resolve all symbols before eventuall sending it in.
# Removed od_ReportIssue

Test Plan: Tested OK on Linux.

Reviewers: nanne

Reviewed By: nanne

Differential Revision: https://phabricator.dgbes.com:8443/D9275

--- a/src/Basic/CMakeLists.txt
+++ b/src/Basic/CMakeLists.txt
@@ -109,7 +109,8 @@ set( OD_MODULE_SOURCES
 
 set ( OD_MODULE_PROGS test_exit_program.cc )
 if ( UNIX )
-    set ( OD_MODULE_PROGS ${OD_MODULE_PROGS} od_batch_launcher.cc )
+    list ( APPEND OD_MODULE_PROGS od_batch_launcher.cc )
+    list ( APPEND OD_MODULE_PROGS test_breakpad.cc )
 endif()
 
 if ( ITTNOTIFY_FOUND )
