[od6] Adaption of breakpad changes to windows
Summary:
A number of changes:

1. Wrote process_dump.cmd
2. Re-organized file structure to be the same on windows/linux.
3. Incorporated minidump_tracewalk.exe + dll-files to make dumps

Test Plan:
test_minidump.exe was tested, and the report came out nice.

INSTALLATION is NOT tested. Likely to have problems.

Reviewers: raman, nanne

Differential Revision: https://phabricator.dgbes.com:8443/D9300

--- a/src/Basic/CMakeLists.txt
+++ b/src/Basic/CMakeLists.txt
@@ -9,7 +9,12 @@
 add_definitions( -DmNoAutoUiString )
 
 set( OD_USEQT Core )
-set( OD_USEBREAKPAD Yes )
+
+if ( OD_ENABLE_BREAKPAD )
+    list(APPEND OD_MODULE_INCLUDESYSPATH ${BREAKPAD_DIR}/include/breakpad )
+    list(APPEND OD_MODULE_EXTERNAL_LIBS ${OD_BREAKPADLIBS} )
+endif()
+
 set( QT_MOC_HEADERS
 	qtimercomm.h
 )
@@ -108,9 +113,13 @@ set( OD_MODULE_SOURCES
 )
 
 set ( OD_MODULE_PROGS test_exit_program.cc )
+
+if ( OD_ENABLE_BREAKPAD )
+    list ( APPEND OD_MODULE_PROGS test_breakpad.cc )
+endif()
+
 if ( UNIX )
     list ( APPEND OD_MODULE_PROGS od_batch_launcher.cc )
-    list ( APPEND OD_MODULE_PROGS test_breakpad.cc )
 endif()
 
 if ( ITTNOTIFY_FOUND )
@@ -128,7 +137,6 @@ if ( NOT (CMAKE_SOURCE_DIR STREQUAL CMAKE_BINARY_DIR) )
                     "${CMAKE_SOURCE_DIR}/dtect/script with space.sh"
                     "${CMAKE_BINARY_DIR}/dtect/script with space.sh" )
 endif()
-
 
 
 OD_INIT_MODULE()
