Added od_ImageViewer and use it to show keyboard shortcuts table

--- a/src/uiTools/CMakeLists.txt
+++ b/src/uiTools/CMakeLists.txt
@@ -101,8 +101,9 @@ SET( OD_MODULE_SOURCES
 	uipolardiagram.cc
 )
 
-SET( OD_MODULE_GUI_PROGS
+set( OD_MODULE_GUI_PROGS
 	od_FileBrowser.cc
+	od_ImageViewer.cc
 	od_ProgressViewer.cc
 	od_uiReportIssue.cc
 )
@@ -113,3 +114,4 @@ if( WIN32 )
 endif( WIN32 )
 
 OD_INIT_MODULE()
+
