[od5] Added symbol generation to breakpad, and installed symbol files in release mode.
Summary:
This revision does a few things:

* All symbols are extracted into bin/lux64/<dbg|rls>/symbols/
* All symbols are installed in release mode
* The crash-handler launches a new script (process_dumpfile.sh/cmd)
  to resolve all symbols before eventuall sending it in.
* Removed od_ReportIssue
* Wrote process_dump.cmd
* Re-organized file structure to be the same on windows/linux.
* Incorporated minidump_tracewalk.exe + dll-files to make dumps
* Moved test_breakpad to uiTools.
* Added check for environment variables that disallow sending of reports.
* Added warning that we're sending unencrypted.
* Removed od_ReportIssue from package defs.

Test Plan: Tested on linux. Will be tested on windows.

Reviewers: raman

Reviewed By: raman

Differential Revision: https://phabricator.dgbes.com:8443/D9323

--- a/src/uiBase/CMakeLists.txt
+++ b/src/uiBase/CMakeLists.txt
@@ -33,6 +33,7 @@ SET(OD_MODULE_SOURCES     i_layout.cc
 		uiaction.cc
 		uibutton.cc
 		uibuttongroup.cc
+		uiclipboard.cc
 		uicolor.cc
 		uicombobox.cc
 		uicursor.cc
@@ -83,7 +84,6 @@ SET(OD_MODULE_SOURCES     i_layout.cc
 		uitoolbar.cc
 		uitreeview.cc
 		uivirtualkeyboard.cc)
-
 if ( APPLE )
     list ( APPEND OD_MODULE_SOURCES uimacinit.cc )
 endif()
