Added new class ui3DViewer2Image Added new plugin uiPresentationMaker Improved getObjectInfo functions (used to generate slide names) Fixed some tabs in uiODAttribTreeItem

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -96,6 +96,7 @@ set( OD_PLUGINS
 	uiMadagascar
 	uiMadagascarAttribs
 	uiMATLABLink
+	uiPresentationMaker
 	uiTut
 	uiTutMadagascar
 	uiVoxelConnectivityFilter
