od: Minor uiStrings changes
Summary: This revision contains minor changes and fixes and correction in the syntax of the exixting arguments.

Test Plan: Compiled and running

Reviewers: satyaki

Reviewed By: satyaki

Subscribers: raman

Differential Revision: https://phabricator.dgbes.com:8443/D9415

--- a/src/uiCmdDriver/CMakeLists.txt
+++ b/src/uiCmdDriver/CMakeLists.txt
@@ -5,8 +5,10 @@
 #	RCS :		$Id$
 #_______________________________________________________________________________
 
-set(OD_MODULE_DEPS uiTools )
-set(OD_MODULE_SOURCES
+add_definitions( -DmNoAutoUiString )
+
+SET(OD_MODULE_DEPS uiTools )
+SET(OD_MODULE_SOURCES
 	canvascommands.cc
 	cmdcomposer.cc
 	cmddriverbasics.cc
